--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,13 +23,13 @@
     background: url(../images/noise.gif);
 }
 
-main{
+main {
     color: #f4f4f4;
     background-image: url('../images/idk.png');
     background-repeat: no-repeat;
     background-size: cover;
 
-    
+
 }
 
 /* .page-1-www{
@@ -105,8 +105,6 @@ main{
     background-color: rgb(130, 206, 239, .7);
 }
 
-
-
 .fg-1 {
     background-color: var(--fg-1);
 }
@@ -143,14 +141,12 @@ main{
 .grid-2 {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    gap: 1em 2em;
+    grid-template-rows: min-content 1fr;
+    gap: 1em 1em;
     grid-auto-flow: row;
-    justify-content: center;
-    justify-items: stretch;
-    align-items: center;
     grid-template-areas:
-        "t-1 t-2";
+        "t-1 t-1"
+        "t-2 t-3";
 }
 
 .t-1 {
@@ -159,6 +155,60 @@ main{
 
 .t-2 {
     grid-area: t-2;
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+}
+
+.t-3 {
+    align-self: center;
+    grid-area: t-3;
+}
+
+
+.t-3-wrapper li {
+    font-size: 19px;
+}
+
+.gapping-2 {
+    gap: 12px;
+}
+
+.ttk-box-1 {
+    width: 10px;
+    height: 10px;
+    border-radius: 2px;
+    background-color: #886BD8;
+}
+
+
+.ttk-box-2 {
+    width: 10px;
+    height: 10px;
+    border-radius: 2px;
+    background-color: #5E3FBE;
+}
+
+.ttk-box-3 {
+    width: 10px;
+    height: 10px;
+    border-radius: 2px;
+    background-color: #F4F0FD;
+}
+
+
+.ttk-box-4 {
+    width: 10px;
+    border-radius: 2px;
+    height: 10px;
+    background-color: #A88DEB;
+}
+
+.ttk-box-5 {
+    width: 10px;
+    border-radius: 2px;
+    height: 10px;
+    background-color: #CBB6F8;
 }
 
 
@@ -210,6 +260,15 @@ main{
         padding: 0 1rem;
     }
 
+    .ff-flex {
+        flex-direction: column !important;
+    }
+
+
+    .p-wrapper-3 {
+        width: 80% !important;
+    }
+
 }
 
 @media only screen and (max-width: 900px) {
@@ -242,19 +301,98 @@ main{
     }
 
 
+    .supply {
+        font-size: 19px !important;
+    }
 
+    .ttk li {
+        font-size: 16px;
+    }
+
+    .tokenomics-wrapper {
+        padding: 2rem 1rem !important;
+    }
 
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
+
+@media only screen and (max-width: 375px) {
+
+    .ff-flex {
+        padding: 2rem !important;
+    }
+
+    .p-wrapper-3 {
+        width: 100%;
+    }
+
+}
+
 @media only screen and (max-width: 320px) {
     .cta-button-3 {
         flex-direction: column !important;
         row-gap: 12px;
     }
+
+    .ff-flex {
+        padding: 2rem 1rem !important;
+    }
+
+    .ttk li {
+        font-size: 14px;
+    }
+
+
+    .grid-2 {
+        text-align: start !important;
+    }
+
+    .kamo-text{
+        font-size: 24px;
+    }
+
 }
 
-@media only screen and (max-width: 375px) {}
+@media only screen and (max-width: 767px) {
+    .p-wrapper-4 p {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 990px) {
+
+    .grid-2 {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: min-content min-content min-content;
+        gap: 1em 1em;
+        text-align: center;
+        grid-auto-flow: row;
+        grid-template-areas:
+            "t-1 t-1"
+            "t-2 t-2"
+            "t-3 t-3";
+    }
+
+    .t-1 {
+        grid-area: t-1;
+    }
+
+    .t-2 {
+        justify-self: center;
+        grid-area: t-2;
+    }
+
+    .t-3 {
+        justify-self: center;
+        grid-area: t-3;
+    }
+
+
+
+}
+
 
 
 /* loco */
